[package]
name = "ftml-json"
description = "Foundation Text Markup Language JSONRPC server"
version = "0.0.1"
authors = ["Ammon Smith <ammon.i.smith@gmail.com>"]
edition = "2018" # this refers to the Cargo.toml version

[dependencies]
color-backtrace = "0.2"
ftml = { version = "0.2", path = "../ftml" }
jsonrpc-core = "13"
jsonrpc-derive = "13"
jsonrpc-http-server = "13"
serde = { version = "1", features = ["derive"] }
toml = "0.5"
