[package]
name = "ftml-json"
description = "Foundation Text Markup Language JSONRPC server"
version = "0.0.2"
authors = ["Ammon Smith <ammon.i.smith@gmail.com>"]
edition = "2018" # this refers to the Cargo.toml version

[dependencies]
clap = "2"
color-backtrace = "0.2"
ftml = { version = "0.2", path = "../ftml" }
jsonrpc-core = "13"
jsonrpc-core-client = "13"
jsonrpc-derive = "13"
jsonrpc-http-server = "13"
num_cpus = "1"
serde = { version = "1", features = ["derive"] }
str-macro = "0.1"
toml = "0.5"
