[package]
name = "ftml-json"
description = "Foundation Text Markup Language JSONRPC server"
version = "0.0.3"
authors = ["Ammon Smith <ammon.i.smith@gmail.com>"]
edition = "2018" # this refers to the Cargo.toml version

[dependencies]
clap = "2"
color-backtrace = "0.2"
ftml = { version = "0.2", git = "https://github.com/Nu-SCPTheme/ftml" }
jsonrpc-core = "14"
jsonrpc-core-client = "14"
jsonrpc-derive = "14"
jsonrpc-http-server = "14"
log = "0.4"
num_cpus = "1"
pest = "*"
pretty_env_logger = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "*"
str-macro = "0.1"
toml = "0.5"
